syntax="proto3";

package algo;


// The request message containing the required parameters.
message SortRequest {
repeated int32 arr =1;
}

// The response message containing the required parameters.
message SortReplay {
 repeated int32 arr= 1;
}

// The request message containing the required parameters.
message SearchRequest {
 repeated int32 num = 1;
 int32 key=2;
}

// The response message containing the required parameters.
message SearchReplay {
 int32 ret = 1;
}
// The request message containing the required parameters.
message FibbonaciRequest {
 int32 num = 1;
}

// The response message containing the required parameters.
message FibbonaciReply {
 string ret = 1;
}
